--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -15,5 +15,30 @@
         <input type="number" required placeholder="Nota da ativadade" min="0" max="10" />
         <button type="submit">Adicionar + </button>
     </form>
+    <table>
+        <thead>
+            <tr>
+                <th>
+                    Nome da atividade
+                </th>
+                <th> Nota da ativadade</th>
+                <th>Aprovado?</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+            <td>Atividade</td>
+            <td>7</td>
+            <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Média final</td>
+                <td>7</td>
+                <td>aprovado</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
