--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Medias</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <div>
     <header>
         <img src="./images/logo.png" alt="capelo e diploma">
         <h1>Calculadora de médias</h1>
@@ -40,5 +45,6 @@
             </tr>
         </tfoot>
     </table>
+    </div>
 </body>
 </html>
