--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -20,7 +20,7 @@
         <input type="number" required placeholder="Nota da ativadade" min="0" max="10" />
         <button type="submit">Adicionar + </button>
     </form>
-    <table>
+    <table cellspacing="0">
         <thead>
             <tr>
                 <th>
@@ -41,7 +41,7 @@
             <tr>
                 <td>Média final</td>
                 <td>7</td>
-                <td>aprovado</td>
+                <td><span class="resultado aprovado">Aprovado</span></td>
             </tr>
         </tfoot>
     </table>
