--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div>
+    <div class="container">
     <header>
         <img src="./images/logo.png" alt="capelo e diploma">
         <h1>Calculadora de médias</h1>
@@ -32,9 +32,9 @@
         </thead>
         <tbody>
             <tr>
-            <td>Atividade</td>
-            <td>7</td>
-            <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
+                <td>Atividade</td>
+                <td>7</td>
+                <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
             </tr>
         </tbody>
         <tfoot>
